--- a/templates/profile.html
+++ b/templates/profile.html
@@ -2,4 +2,14 @@
 
 {% block content %}
     <h1>Profile information</h1>
+    <p>Here is some information about the user:</p>
+    <ul>
+        <!-- Will be done dynamically -->
+        <li>Name: John Doe</li>
+        <li>Email: john@example.com</li>
+
+        <li><a href="/delete-account">Delete Account</a></li>
+        <li><a href="/login">Sign out</a></li>
+        <li><a href="/change-pfp">Change Profile Picture</a></li>
+    </ul>
 {% endblock %}
