--- a/templates/history.html
+++ b/templates/history.html
@@ -2,4 +2,9 @@
 
 {% block content %}
     <h1>Previously used pictures</h1>
+    Select a photo to activate it
+    <!-- Added pictures from database -->
+    <ul>
+
+    </ul>
 {% endblock %}
