--- a/templates/login.html
+++ b/templates/login.html
@@ -2,4 +2,9 @@
 
 {% block content %}
     <h1>Login page</h1>
+    <form>
+        Username: <input type="text" name="username">
+        Password: <input type="password" name="password">
+        <input type="submit">
+    </form>
 {% endblock %}
