add navigation dropdowns

--- a/templates/change-pfp.html
+++ b/templates/change-pfp.html
@@ -1,6 +1,6 @@
-{% extends 'base.html' %}
+{% extends 'profile-settings.html' %}
 
-{% block content %}
+{% block profile_content %}
     <h1>Change profile picture</h1>
     <form>
         Link to new picture: <input type="text" name="link">
