--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,6 +1,6 @@
-{% extends 'base.html' %}
+{% extends 'profile-settings.html' %}
 
-{% block content %}
+{% block profile_content %}
     <h1>Profile information</h1>
     <p>Here is some information about the user:</p>
     <ul>
