basic signup functionality

--- a/templates/signup.html
+++ b/templates/signup.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     <h1>Account creation page</h1>
-    <form>
+    <form method="post">
         Username: <input type="text" name="username">
         Password: <input type="password" name="password">
         <input type="submit">
