--- a/templates/profile.html
+++ b/templates/profile.html
@@ -5,6 +5,8 @@
     <p>Here is some information about the user:</p>
     <ul>
         <!-- Will be done dynamically -->
+        <img src="https://www.iprcenter.gov/image-repository/blank-profile-picture.png/@@images/image.png" alt="Profile Picture", width="100", height="100">
+
         <li>Name: John Doe</li>
         <li>Email: john@example.com</li>
 
