--- a/templates/base.html
+++ b/templates/base.html
@@ -11,8 +11,19 @@
             <option value="">Select a page</option>
             <option value="/login">Login</option>
             <option value="/signup">Sign Up</option>
-            <option value="/logout">Log Out</option>
+            {% if username %}
+                <option value="/profile/{{ username }}">Profile</option>
+                <option value="/history/{{ username }}">History</option>
+                <option value="/change-pfp">Change Picture</option>
+                <option value="/delete-account">Delete Account</option>
+                <option value="/logout">Logout</option>
+            {% endif %}
         </select>
+        <div>
+            {% if username %}
+                <p>{{ username }}</p>
+            {% endif %}
+        </div>
 
         <div class="content">
             {% block content %} {% endblock %}
