--- a/templates/history.html
+++ b/templates/history.html
@@ -3,8 +3,8 @@
 {% block content %}
     <h1>History</h1>
     <ul>
-        {% for record in history %}
-        <li>{{ record.timestamp }} - {{ record.action }} - Details: {{ record.details.newPictureLink }}</li>
+        {% for picture in pics %}
+        <li class="picture">{{picture}}</li>
         {% endfor %}
       </ul>
 {% endblock %}
