--- a/templates/base.html
+++ b/templates/base.html
@@ -9,8 +9,10 @@
     <body>
         <select id="redirectDropdown" onchange="redirectToSelected('redirectDropdown')">
             <option value="">Select a page</option>
-            <option value="/login">Login</option>
-            <option value="/signup">Sign Up</option>
+            {% if not username %}
+                <option value="/login">Login</option>
+                <option value="/signup">Sign Up</option>
+            {% endif %}
             {% if username %}
                 <option value="/profile/{{ username }}">Profile</option>
                 <option value="/history/{{ username }}">History</option>
