--- a/templates/profile.html
+++ b/templates/profile.html
@@ -5,11 +5,10 @@
     <p>Here is some information about the user:</p>
     <ul>
         <!-- Will be done dynamically -->
-        <li>Name: John Doe</li>
-        <li>Email: john@example.com</li>
-
+        <li>Name: {{ username }}</li>
+        <li><img src= "{{ pic }}" alt="Image Description"></li>
         <li><a href="/change-pfp">Change Profile Picture</a></li>
-        <li><a href="/history">Previous Profile Pictures</a></li>
+        <li><a href="/history/{{ username }}">Previous Profile Pictures</a></li>
         <li><a href="/delete-account">Delete Account</a></li>
         <li><a href="/login">Sign out</a></li>
     </ul>
