--- a/templates/base.html
+++ b/templates/base.html
@@ -25,6 +25,9 @@
             {% if username %}
                 <p>{{ username }}</p>
             {% endif %}
+            {% if not username %}
+                <p>Not signed in</p>
+            {% endif %}
         </div>
 
         <div class="content">
