--- a/static/styles/styles.css
+++ b/static/styles/styles.css
@@ -1,12 +1,94 @@
 body {
     background-color: gainsboro;
+    font-family: 'Fira Sans Extra Condensed', sans-serif;
+}
+
+header {
+    padding: 0;
+    margin: 0;
+    text-align: center;
+    background-color: #f0f0f0;
+}
+
+#container {
+    padding: 20px;
+    transition: margin-left 0.3s;
 }
 
 .content {
-    width: 75%;
+    width: 90%;
     margin: auto;
-    margin-top: 80px;
     padding: 10%;
+    height: 70vh;
     background-color: azure;
-    font: 1em sans-serif;
+    font: 1.2em sans-serif;
+    text-align: center;
+}
+
+.content select {
+    width: 70%;
+    max-width: 200px;
+    padding: 8px; 
+    border: 1px solid #ccc; 
+    border-radius: 4px; 
+    margin-bottom: 10px;
+}
+
+.content input[type="submit"] {
+    background-color: #4CAF50; /* Green */
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+    border-radius: 4px;
+}
+
+.login-form {
+    width: 80%;
+    max-width: 400px;
+    margin: 0 auto;
+}
+
+.form-group {
+    margin-bottom: 20px;
+}
+
+label {
+    display: block;
+}
+
+input[type="text"],
+input[type="password"] {
+    width: 100%;
+    padding: 8px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+li {
+    margin-bottom: 10px;
+}
+
+li a {
+    text-decoration: none;
+    color: #333;
+    display: inline-block;
+    padding: 8px 16px;
+    background-color: #f0f0f0;
+    border-radius: 4px;
+    transition: background-color 0.3s ease;
+}
+
+li a:hover {
+    background-color: #ddd;
 }
