removed duplicate menu

--- a/templates/change-pfp.html
+++ b/templates/change-pfp.html
@@ -1,6 +1,6 @@
-{% extends 'profile-settings.html' %}
+{% extends 'base.html' %}
 
-{% block profile_content %}
+{% block content %}
     <h1>Change profile picture</h1>
     <form method="post">
         Link to photo: <input type="text" name="link">
