--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,6 +1,6 @@
-{% extends 'profile-settings.html' %}
+{% extends 'base.html' %}
 
-{% block profile_content %}
+{% block content %}
     <h1>{{ profileName }}'s Profile</h1>
     <ul>
         <img src={{pic}} alt="Profile Picture", width="100", height="100">
