--- a/templates/login.html
+++ b/templates/login.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <h1>Login page</h1>
+    <h1>Log In</h1>
     <form action="/login" method="post" class="login-form">
         <div class="form-group">
             <label for="username">Username:</label>
