account creation page title

--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <h1>Account creation page</h1>
+    <h1>Create an Account</h1>
     <form method="post">
         Username: <input type="text" name="username">
         Password: <input type="password" name="password">
