--- a/templates/history.html
+++ b/templates/history.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <h1>History</h1>
+    <h1>Previously Used Pictures</h1>
     <ul class = "picList">
       {% for pic in pics %}
         <li><img src= "{{ pic }}" alt="Previous Photo" height = "100" width="100"></li>
