deleting images now possible

--- a/templates/profile-settings.html
+++ b/templates/profile-settings.html
@@ -8,7 +8,7 @@
     <option value="/profile/{{ username }}">Profile</option>
     <option value="/change-pfp">Change Profile Picture</option>
     <option value="/history/{{ username }}">History</option>
-    <option value="/delete-account">Delete Account</option>
+    <option value="/delete">Delete Pictures</option>
     <option value="/logout">Logout</option>
 </select>
 {%endif%}
