changed menu default

--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <select id="redirectDropdown" onchange="redirectToSelected('redirectDropdown')">
-            <option value="">Select a page</option>
+            <option value="">Go to page:</option>
             {% if not username %}
                 <option value="/login">Login</option>
                 <option value="/signup">Sign Up</option>
