--- a/templates/login.html
+++ b/templates/login.html
@@ -5,11 +5,11 @@
     <form action="/login" method="post" class="login-form">
         <div class="form-group">
             <label for="username">Username:</label>
-            <input type="text" id="username" name="username">
+            <input type="text" id="username" name="username" required>
         </div>
         <div class="form-group">
             <label for="password">Password:</label>
-            <input type="password" id="password" name="password">
+            <input type="password" id="password" name="password" required>
         </div>
         <input type="submit" value="Login">
     </form>
