--- a/templates/signup.html
+++ b/templates/signup.html
@@ -3,8 +3,8 @@
 {% block content %}
     <h1>Create an Account</h1>
     <form method="post">
-        Username: <input type="text" name="username">
-        Password: <input type="password" name="password">
+        Username: <input type="text" name="username" required>
+        Password: <input type="password" name="password" required>
         <input type="submit">
     </form>
 {% endblock %}
