require non-empty string

--- a/templates/change-pfp.html
+++ b/templates/change-pfp.html
@@ -3,7 +3,7 @@
 {% block content %}
     <h1>Change Profile Picture</h1>
     <form method="post">
-        Link a photo: <input type="text" name="link">
+        Link a photo: <input type="text" name="link" required>
         <input type="submit">
     </form>
     <h3>Or select a picture you're used before <a href="/history/{{username}}">here</a>.</h3>
