--- a/templates/signup.html
+++ b/templates/signup.html
@@ -3,8 +3,17 @@
 {% block content %}
     <h1>Create an Account</h1>
     <form method="post">
-        Username: <input type="text" name="username" required>
-        Password: <input type="password" name="password" required>
-        <input type="submit">
+        <div class="form-group">
+            <label for="username">Username:</label>
+            <input type="text" id="username" name="username" required>
+            {% if username_taken %}
+                <p>Username is taken</p>
+            {%endif%}
+        </div>
+        <div class="form-group">
+            <label for="password">Password:</label>
+            <input type="password" id="password" name="password" required>
+        </div>
+        <input type="submit" value="Signup">
     </form>
 {% endblock %}
