--- a/templates/login.html
+++ b/templates/login.html
@@ -6,6 +6,9 @@
         <div class="form-group">
             <label for="username">Username:</label>
             <input type="text" id="username" name="username" required>
+            {% if username_dne %}
+                <p>Username does not exist</p>
+            {%endif%}
         </div>
         <div class="form-group">
             <label for="password">Password:</label>
