--- a/templates/login.html
+++ b/templates/login.html
@@ -13,6 +13,9 @@
         <div class="form-group">
             <label for="password">Password:</label>
             <input type="password" id="password" name="password" required>
+            {% if wrong_pw %}
+                <p>Wrong password</p>
+            {%endif%}
         </div>
         <input type="submit" value="Login">
     </form>
